--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.fontSize": 10
+    "editor.fontSize": 10,
+    "terminal.integrated.fontSize": 10,
+    "terminal.integrated.shellIntegration.history": 1,
+    "editor.minimap.size": "proportional"
 }
